# gittery

./: .gitignore  gittery.cabal  shell.nix
exe/: Main.hs
src/Gittery/: Commands.hs  Git.hs  Types.hs
