Name:           gittery
Version:        0.1
Synopsis:       Tool for managing multiple repositories
Description:
  Its primary use 

Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:       Data
Build-Type:     Simple

Executable gittery
  Ghc-options:      -Wall
  Default-Language: GHC2021
  Default-Extensions:
        NoPolyKinds
        DerivingStrategies
        DeriveAnyClass
        LambdaCase
        OverloadedRecordDot
        PatternSynonyms
        DuplicateRecordFields
        NoFieldSelectors
        LambdaCase
  Build-Depends:    base                 >=4.9 && <5
                  , aeson                >=2
                  , text                 >=1
                  , containers
                  , unordered-containers
                  , optparse-applicative >=0.14
                  , hostname
                  , yaml                 >=0.8.32
                  , directory
                  , filepath
                  , transformers
                  , typed-process
                  , ansi-terminal
  hs-source-dirs:   exe src
  Main-is:          Main.hs
  Other-modules:
                Gittery.Types
                Gittery.Commands
                Gittery.Git
